# claude-usage

./: Makefile  README.md  com.claude.usage.plist  main.py  pyproject.toml
src/: OAuth_credentials.py  app.py  cli.py  config.py  draw_icon.py  format_util.py  logging.py  menu_bar.py  usage_fetch.py
