[project]
name = "claude-usage"
version = "0.0.11"
description = "macOS menu bar app for Anthropic API usage and cost tracking"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "rumps>=0.4.0",
    "requests>=2.32.3",
    "keyring>=25.6.0",
    "python-dotenv>=1.0.1",
    "pyobjc-framework-quartz>=12.1",
    "pyobjc-framework-coretext>=12.1",
]
